correct letter spacing

--- a/style.css
+++ b/style.css
@@ -41,4 +41,5 @@ li a:hover {
   border: 5px solid white;
   margin: 20px;
   padding: 20px;
+  letter-spacing: 1px;
 }
